--- a/thesis.tex
+++ b/thesis.tex
@@ -24,10 +24,9 @@
 \maketitle
 
 \input{introduction.tex}
-\input{formalism.tex}
 \input{sks.tex}
 \input{atomic_flows.tex}
-\input{atomic_flows_and_derivations.tex}
+%\input{atomic_flows_and_derivations.tex}
 \input{normal_forms.tex}
 \input{global_reductions.tex}
 \input{main_result.tex}
