Made a subsection about flow isomorphisms

--- a/atomic_flows.tex
+++ b/atomic_flows.tex
@@ -276,6 +276,9 @@ The left one is not a flow because there is a cycle in it, and the right one bec
 \end{example}
 %------------
 
+%===========================================================
+\subsection{Flow Isomorphism}\label{section:FlowIsomorphism}
+
 %---------------------------------------------------
 \begin{definition}\label{definition:FlowIsomorphism}
 An (\emph{atomic}) \emph{flow isomorphism}\index{flow!isomorphism} between the atomic flows $\phi_1=(V_1,E_1,\eta_1,\up_1,\lo_1)$ and $\phi_2=(V_2,E_2,\eta_2,\up_2,\lo_2)$ is a pair of functions $(f_V,f_E)$, such that
